Fix dark mode colors

--- a/webui/style.css
+++ b/webui/style.css
@@ -8,6 +8,10 @@ body {
 }
 
 fieldset {
+	padding: 0;
+}
+
+fieldset#rootGroup {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
   grid-template-rows: auto auto auto auto;
@@ -15,6 +19,45 @@ fieldset {
   grid-gap: 1em;
   text-align: center;
   border: 0;
+}
+
+fieldset#switcher {
+	border: 0; 
+	text-align: right;
+	margin-bottom: 1em;
+}
+
+fieldset#switcher button:first-child{
+	border-radius: 1em 0em 0em 1em;
+}
+
+fieldset#switcher button:last-child{
+	border-radius: 0 1em 1em 0;
+}
+
+table {
+	background-color: white;
+	border-collapse: collapse;
+	width: 100%;
+	box-shadow: 0 0 10px 0 #444;
+}
+
+th, td {
+	border: 1px solid #efefef;
+	text-align: left;
+	padding: .6em;
+}
+
+th:first-child {
+	width: 5%;
+}
+
+tr:hover td {
+	background-color: beige;
+}
+
+button.activeSection {
+	font-weight: bold;
 }
 
 legend {
@@ -153,4 +196,38 @@ img.logo {
   button:disabled {
     background-color: black;
   }
+
+  table, td, th {
+	border: 1px solid gray;
+  }
+
+  td, tr {
+	background-color: #222;
+	color: white;
+  }
+
+  tr:hover td {
+	background-color: #666;
+  }
+
+  footer, footer a {
+	color: gray;
+  }
+}
+
+main {
+	padding: 1em;
+}
+
+summary {
+	cursor: pointer;
+}
+
+details {
+	display: inline-block;
+}
+
+details[open] {
+	margin-top: 1em;
+	display: block;
 }
